# bashtest

./: .bazelrc  .pre-commit-config.yaml  CHANGELOG.md  MODULE.bazel  README.md  RULES.md  WORKSPACE
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: main.yml  publish.yaml  release.yml  release_prep.sh
bashtest/: BUILD.bazel  README.md  bashtest.bzl  bashtest.sh
bashtest/tests/: BUILD.bazel  bashtest_done_test.sh  bashtest_init_test.sh  bashtest_test.sh
bzl/workspace/: BUILD.bazel  init_modules.bzl  load_modules.bzl
tools/: trigger_release.sh
