# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_helly25_bashtest//bashtest:bashtest.bzl", "bashtest")

package(default_visibility = ["//visibility:private"])

bashtest(
    name = "bashtest_test",
    srcs = ["bashtest_test.sh"],
)

bashtest(
    name = "bashtest_init_test",
    srcs = ["bashtest_init_test.sh"],
)

bashtest(
    name = "bashtest_done_test",
    srcs = ["bashtest_done_test.sh"],
)
